@@ -59,15 +59,14 @@ form.classic {
         th {
             font-family: #fonts[system];
         }
-        .ds-field.hide, .ds-reorderable.hide {
+        .ds-field.hide, .ds-reorderable.hide, .ds-remove.hide {
             display: none;
         }
         .ds-reorderable-drag {
             position: absolute;
         }
         .ds-reorderable .knob {
-            background: purple; border-radius: 50px; display: inline-block;
-            height: 20px; width: 20px; vertical-align: middle;
+            display: block; height: 20px; width: 20px;
         }
     }
     .form-wrapper {
@@ -266,7 +265,7 @@ form.classic {
         display: inline-flex;
     }
     .input-button.right {
-        float: right; margin-left: 0.5rem;
+        margin-left: 2rem;
     }
     .input-captcha input, .input-captcha .field-label,
     .input-display .field-label, .field-label.select-multiple,
